--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "spatie/laravel-disk-monitor",
+    "name": "dantangssd/laravel-disk-monitor",
     "description": "Monitor metrics of Laravel disks",
     "keywords": [
         "Spatie",
@@ -18,15 +18,11 @@
     "require": {
         "php": "^8.0",
         "spatie/laravel-package-tools": "^1.4.3",
-        "illuminate/contracts": "^8.37",
-        "illuminate/console": "^6.0|^7.0",
-        "illuminate/database": "^6.0|^7.0",
-        "illuminate/http": "^6.0|^7.0",
-        "illuminate/support": "^6.0|^7.0"
+        "illuminate/contracts": "^8.37"
     },
     "require-dev": {
         "nunomaduro/collision": "^5.3",
-        "orchestra/testbench": "^4.0|^5.0|^6.15",
+        "orchestra/testbench": "^6.15",
         "pestphp/pest": "^1.18",
         "pestphp/pest-plugin-laravel": "^1.1",
         "spatie/laravel-ray": "^1.23",
